--- a/index.html
+++ b/index.html
@@ -24,14 +24,21 @@
     <!-- -------Header-------- -->
     <div class="header">
         <div class="content-header">
-            <div class="left-header">
-
+            <div class="top-footer">
+                <div class="logo-header">
+                    <img src="" alt="">
+                </div>
+                <div class="contact-header">
+                    <div class="item-contact">
+                        .icon-
+                    </div>
+                </div>
             </div>
             <div class="center-header">
 
             </div>
             <div class="right-header">
-                
+
             </div>
         </div>
     </div>
