--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
                     </div>
                 </div>
             </div>
-            <div class="center-header">
-
-            </div>
-            <div class="right-header">
-
+            <div class="bot-header">
+                <nav class="navigator">
+                    <a href="#" class="link-navi">Inicio</a>
+                    <a href="#" class="link-navi">Qué es Aymsa</a>
+                    <a href="#" class="link-navi">Portafolio de servicios</a>
+                    <a href="#" class="link-navi">Inicio</a>
+                </nav>
             </div>
         </div>
     </div>
