--- a/index.html
+++ b/index.html
@@ -26,11 +26,35 @@
         <div class="content-header">
             <div class="top-footer">
                 <div class="logo-header">
-                    <img src="" alt="">
+                    <img src="img/logo-aymsa.png" alt="">
                 </div>
                 <div class="contact-header">
                     <div class="item-contact">
-                        .icon-
+                        <div class="icon-item">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                        <div class="text-contact">
+                            <h3 class="title-contact">Ubicación</h3>
+                            <p>Edificio Del Café Oficina 2605. Medellín</p>
+                        </div>
+                    </div>
+                    <div class="item-contact">
+                        <div class="icon-item">
+                            <i class="fa-solid fa-clock"></i>
+                        </div>
+                        <div class="text-contact">
+                            <h3 class="title-contact">Horario</h3>
+                            <p>Lunes / Viernes 8:00 am a 5:00 pm    </p>
+                        </div>
+                    </div>
+                    <div class="item-contact">
+                        <div class="icon-item">
+                            <i class="fa-solid fa-envelope"></i>
+                        </div>
+                        <div class="text-contact">
+                            <h3 class="title-contact">Contacto</h3>
+                            <p>info@aymsa.com +57 340 985995</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -39,8 +63,64 @@
                     <a href="#" class="link-navi">Inicio</a>
                     <a href="#" class="link-navi">Qué es Aymsa</a>
                     <a href="#" class="link-navi">Portafolio de servicios</a>
-                    <a href="#" class="link-navi">Inicio</a>
+                    <a href="#" class="link-navi">Portal clientes</a>
                 </nav>
+                <div class="search-header">
+                    <a href="#" class="icon-search"><i class="fa-solid fa-magnifying-glass"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ------Cover------- -->
+    <div class="cover">
+        <div class="content-cover">
+            <div class="carousel-cover owl-carousel">
+                <div class="card-cover">
+                    <div class="text-cover">
+                        <h2 class="title-cover">Especialistas en entender la pasión del fútbol</h2>
+                        <p class="subtitle-cover">Convertimos la pasión de los fanáticos en oportunidades de negocios para nuestros clientes.</p>
+                    </div>
+                    <div class="bot-cover">
+                        <a href="#" class="link-cover">For Startups</a>
+                        <a href="#" class="link-cover">For Fast Growing Companies</a>
+                        <a href="#" class="link-cover">For Enterprises</a>
+                    </div>
+                </div>
+                <div class="card-cover">
+                    <div class="text-cover">
+                        <h2 class="title-cover">Especialistas en entender la pasión del fútbol</h2>
+                        <p class="subtitle-cover">Convertimos la pasión de los fanáticos en oportunidades de negocios para nuestros clientes.</p>
+                    </div>
+                    <div class="bot-cover">
+                        <a href="#" class="link-cover">For Startups</a>
+                        <a href="#" class="link-cover">For Fast Growing Companies</a>
+                        <a href="#" class="link-cover">For Enterprises</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- -------Mod-if----- -->
+    <div class="if">
+        <div class="content-if">
+            <div class="grid-if">
+                <div class="rel-cards"></div>
+                <div class="abs-cards">
+                    <div class="head-global">
+                        <h2 class="title-global">Conoce nuestros servicios</h2>
+                        <p>Con más de 20 años en el mercado, hemos creado Soluciones adaptables a cada una 
+                            de sus necesidades que permiten ayudarle a optimizar su tiempo y sus recursos</p>
+                    </div>
+                    <div class="row-cards">
+                        <div class="card-serv">
+                            <div class="img-card">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -53,5 +133,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
+    <script src="js/carousel-cover.js"></script>
 </body>
 </html>
