--- a/portafolio.html
+++ b/portafolio.html
@@ -15,7 +15,7 @@
     <!-- ----------LINKS FONTAWESOME -------------------->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Home | Aymsa</title>
+    <title>Portafolio | Aymsa</title>
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -75,27 +75,10 @@
     <!-- ------Cover------- -->
     <div class="cover">
         <div class="content-cover">
-            <div class="carousel-cover owl-carousel">
-                <div class="card-cover">
-                    <div class="content-card">
-                        <div class="box-cover">
-                            <h2 class="subtitle-box">Servicio integral de <br> <b>Talento Humano</b></h2>
-                            <p>Somos una compañía especializada en tercerización de servicios integrales de 
-                                Talento Humano que provee soluciones y genera valor a su Negocio.</p>
-                            <a href="#" class="btn-box">Conoce nuestro portafolio</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-cover">
-                    <div class="content-card">
-                        <div class="box-cover">
-                            <h2 class="subtitle-box">Servicio integral de <br> <b>Talento Humano</b></h2>
-                            <p>Somos una compañía especializada en tercerización de servicios integrales de 
-                                Talento Humano que provee soluciones y genera valor a su Negocio.</p>
-                            <a href="#" class="btn-box">Conoce nuestro portafolio</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="text-cover">
+                <h1 class="title-cover">Experiencia y calidad humana <br> <b>Somos expertos</b></h1>
+                <p>Somos expertos en tercerización de servicios integrales de Talento humano, 
+                    proveemos soluciones y simplificamos las tareas de Gestión Humana</p>
             </div>
         </div>
     </div>
@@ -103,45 +86,91 @@
     <!-- -------Mod-if----- -->
     <div class="if">
         <div class="content-if">
-            <div class="grid-if">
-                <div class="rel-cards"></div>
-                <div class="abs-cards">
-                    <div class="head-global">
-                        <h2 class="title-global">Conoce nuestros servicios</h2>
-                        <p>Con más de 20 años en el mercado, hemos creado Soluciones adaptables a cada una 
-                            de sus necesidades que permiten ayudarle a optimizar su tiempo y sus recursos</p>
+            <div class="head-if">
+                <h3 class="subtitle-sm">Portafolio de servicios</h3>
+                <h2 class="title-sm">Contamos con una infraestructura tecnológica que garantiza que nuestros procesos 
+                    estén respaldados por herramientas tecnológicas que brindan confiabilidad y agilidad en los resultados</h2>
+            </div>
+            <div class="row-vis">
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/agre-people.png" alt="">
+                        <h2 class="title-vis">Atracción de personal</h2>
                     </div>
-                    <div class="row-cards">
-                        <div class="card-serv">
-                            <div class="img-card">
-                                <img src="img/wallp-01.jpg" alt="">
-                            </div>
-                            <div class="text-card">
-                                <h2 class="title-card">Atracción de personal</h2>
-                                <p>Realizamos el proceso de atracción y búsqueda de candidatos mediante el uso de herramientas tecnológicas</p>
-                                <a href="#" class="btn-card">Conoce más</a>
-                            </div>
-                        </div>
-                        <div class="card-serv">
-                            <div class="img-card">
-                                <img src="img/wallp-01.jpg" alt="">
-                            </div>
-                            <div class="text-card">
-                                <h2 class="title-card">Atracción de personal</h2>
-                                <p>Realizamos el proceso de atracción y búsqueda de candidatos mediante el uso de herramientas tecnológicas</p>
-                                <a href="#" class="btn-card">Conoce más</a>
-                            </div>
-                        </div>
-                        <div class="card-serv">
-                            <div class="img-card">
-                                <img src="img/wallp-01.jpg" alt="">
-                            </div>
-                            <div class="text-card">
-                                <h2 class="title-card">Atracción de personal</h2>
-                                <p>Realizamos el proceso de atracción y búsqueda de candidatos mediante el uso de herramientas tecnológicas</p>
-                                <a href="#" class="btn-card">Conoce más</a>
-                            </div>
-                        </div>
+                    <div class="text-vis">
+                        <p>Nos encargamos de realizar el proceso de atracción y búsqueda de candidatos mediante el uso de 
+                            herramientas tecnológicas en diferentes plataformas y modelos de búsqueda, comprometidos con 
+                            el cumplimiento al 100% de los perfiles solicitados por nuestros clientes, asegurando la 
+                            asertividad y oportunidad</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/select.png" alt="">
+                        <h2 class="title-vis">Selección de Personal</h2>
+                    </div>
+                    <div class="text-vis">
+                        <p>Efectuamos procesos de selección en línea con pruebas automatizadas que evalúan los perfiles y 
+                            competencias según los requerimientos del cliente. Incluimos a requerimiento del cliente visita 
+                            domiciliaria, prueba de poligrafía y estudios de seguridad</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/select.png" alt="">
+                        <h2 class="title-vis">Contratación de personal</h2>
+                    </div>
+                    <div class="text-vis">
+                        <p>Apoyamos en el proceso de vinculación y desvinculación de sus colaboradores</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/users.png" alt="">
+                        <h2 class="title-vis">Administración de Nómina</h2>
+                    </div>
+                    <div class="text-vis">
+                        <p>Manejamos un Software integral (ERP) aplicable a los diferentes tipos de nóminas, ajustado a la 
+                            normatividad legal Colombiana. Contamos con un equipo altamente calificado y experto que le 
+                            brinda confianza en el proceso</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/liquidation.png" alt="">
+                        <h2 class="title-vis">Liquidación Seguridad Social</h2>
+                    </div>
+                    <div class="text-vis">
+                        <p>Somos expertos en liquidación de planillas de seguridad social, cumpliendo los procedimientos 
+                            exigidos por la UGPP</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/sst.png" alt="">
+                        <h2 class="title-vis">Asesoramiento de SST</h2>
+                    </div>
+                    <div class="text-vis">
+                        <p>De acuerdo a la necesidad de cada cliente brindamos asesoría para el cumplimiento del Sistema 
+                            de Gestión de Seguridad y Salud en el Trabajo</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/balance.png" alt="">
+                        <h2 class="title-vis">Asesoría jurídica en relaciones laborales</h2>
+                    </div>
+                    <div class="text-vis">
+                        <p>Apoyamos en la atención de consultas legales en materia laboral relacionadas con la ejecución de contratos, trabajadores activos y manejo de procesos disciplinarios.</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/salary.png" alt="">
+                        <h2 class="title-vis">Recobro de incapacidades</h2>
+                    </div>
+                    <div class="text-vis">
+                        <p>Realizamos trámite de recobro de incapacidades ante las diferentes entidades de Seguridad Social</p>
                     </div>
                 </div>
             </div>
