--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -15,7 +15,7 @@
     <!-- ----------LINKS FONTAWESOME -------------------->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Home | Aymsa</title>
+    <title>¿Quiénes somos? | Aymsa</title>
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -75,27 +75,10 @@
     <!-- ------Cover------- -->
     <div class="cover">
         <div class="content-cover">
-            <div class="carousel-cover owl-carousel">
-                <div class="card-cover">
-                    <div class="content-card">
-                        <div class="box-cover">
-                            <h2 class="subtitle-box">Servicio integral de <br> <b>Talento Humano</b></h2>
-                            <p>Somos una compañía especializada en tercerización de servicios integrales de 
-                                Talento Humano que provee soluciones y genera valor a su Negocio.</p>
-                            <a href="#" class="btn-box">Conoce nuestro portafolio</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-cover">
-                    <div class="content-card">
-                        <div class="box-cover">
-                            <h2 class="subtitle-box">Servicio integral de <br> <b>Talento Humano</b></h2>
-                            <p>Somos una compañía especializada en tercerización de servicios integrales de 
-                                Talento Humano que provee soluciones y genera valor a su Negocio.</p>
-                            <a href="#" class="btn-box">Conoce nuestro portafolio</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="text-cover">
+                <h1 class="title-cover">Experiencia y calidad humana <br> <b>Somos expertos</b></h1>
+                <p>Somos expertos en tercerización de servicios integrales de Talento humano, 
+                    proveemos soluciones y simplificamos las tareas de Gestión Humana</p>
             </div>
         </div>
     </div>
@@ -103,45 +86,50 @@
     <!-- -------Mod-if----- -->
     <div class="if">
         <div class="content-if">
-            <div class="grid-if">
-                <div class="rel-cards"></div>
-                <div class="abs-cards">
-                    <div class="head-global">
-                        <h2 class="title-global">Conoce nuestros servicios</h2>
-                        <p>Con más de 20 años en el mercado, hemos creado Soluciones adaptables a cada una 
-                            de sus necesidades que permiten ayudarle a optimizar su tiempo y sus recursos</p>
+            <div class="head-if">
+                <h2 class="title-sm">Contamos con una infraestructura tecnológica que garantiza que nuestros procesos 
+                    estén respaldados por herramientas tecnológicas que brindan confiabilidad y agilidad en los resultados</h2>
+            </div>
+            <div class="row-vis">
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/flecha.png" alt="">
+                        <h2 class="title-vis">Misión</h2>
                     </div>
-                    <div class="row-cards">
-                        <div class="card-serv">
-                            <div class="img-card">
-                                <img src="img/wallp-01.jpg" alt="">
-                            </div>
-                            <div class="text-card">
-                                <h2 class="title-card">Atracción de personal</h2>
-                                <p>Realizamos el proceso de atracción y búsqueda de candidatos mediante el uso de herramientas tecnológicas</p>
-                                <a href="#" class="btn-card">Conoce más</a>
-                            </div>
-                        </div>
-                        <div class="card-serv">
-                            <div class="img-card">
-                                <img src="img/wallp-01.jpg" alt="">
-                            </div>
-                            <div class="text-card">
-                                <h2 class="title-card">Atracción de personal</h2>
-                                <p>Realizamos el proceso de atracción y búsqueda de candidatos mediante el uso de herramientas tecnológicas</p>
-                                <a href="#" class="btn-card">Conoce más</a>
-                            </div>
-                        </div>
-                        <div class="card-serv">
-                            <div class="img-card">
-                                <img src="img/wallp-01.jpg" alt="">
-                            </div>
-                            <div class="text-card">
-                                <h2 class="title-card">Atracción de personal</h2>
-                                <p>Realizamos el proceso de atracción y búsqueda de candidatos mediante el uso de herramientas tecnológicas</p>
-                                <a href="#" class="btn-card">Conoce más</a>
-                            </div>
-                        </div>
+                    <div class="text-vis">
+                        <p>En el 2028, AYMSA será reconocida como empresa líder en servicios de tercerización de procesos 
+                            de Gestión Humana, aportando a nuestros clientes una oferta de valor tecnológica e innovadora</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/config.png" alt="">
+                        <h2 class="title-vis">Visión</h2>
+                    </div>
+                    <div class="text-vis">
+                        <p>Somos un aliado estratégico en la tercerización de los diferentes procesos de talento humano, 
+                            que genera soluciones empresariales ajustadas de las necesidades de nuestros clientes, basados 
+                            en tecnología e innovación.</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="icon-vis">
+                        <img src="img/config.png" alt="">
+                        <h2 class="title-vis">Valores</h2>
+                    </div>
+                    <div class="text-vis">
+                        <p><b>Confianza:</b> Trabajamos basados en el principio de confidencialidad, garantizando la protección 
+                            de la información de nuestros clientes. </p>
+                        <p><b>Honestidad:</b> Promovemos transparencia y ética en cada uno de nuestros procesos.</p>
+                        <p><b>Mejoramiento continuo:</b> Evaluamos constantemente de manera estructurada y sistemática 
+                            la calidad de los servicios para garantizar la satisfacción de nuestros clientes.</p>
+                    </div>
+                </div>
+                <div class="item-vis">
+                    <div class="text-vis">
+                        <p><b>Servicio Oportuno:</b>  Propendemos y aseguramos la efectividad en cada uno de los procesos, 
+                            asegurando tiempo de ejecución y respuesta.</p>
+                        <p><b>Respeto:</b> Promovemos el trato digno y cordial.</p>
                     </div>
                 </div>
             </div>
