--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <title>Home | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css?v=1.3">
-    <link rel="stylesheet" href="css/responsive.css?v=1.3">
+    <link rel="stylesheet" href="css/style.css?v=1.4">
+    <link rel="stylesheet" href="css/responsive.css?v=1.4">
 </head>
 <body>
     <!-- -------Whatsapp-float------ -->
@@ -27,7 +27,7 @@
     </div>
 
     <!-- -------Offcanvas----- -->      
-      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+      <div class="offcanvas offcanvas-start no-border" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
           <a href="index.html" class="logo-mobile"><img src="img/logo-aymsa.png" alt=""></a>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
