--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <title>Home | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css?v=1.6">
-    <link rel="stylesheet" href="css/responsive.css?v=1.6">
+    <link rel="stylesheet" href="css/style.css?v=1.7">
+    <link rel="stylesheet" href="css/responsive.css?v=1.7">
 </head>
 <body>
     <!-- -------Whatsapp-float------ -->
@@ -186,7 +186,7 @@
             <div class="row-cards">
                 <div class="card-serv">
                     <div class="img-card">
-                        <img src="img/wallp-01.jpg" alt="">
+                        <img src="img/pers-01.png" alt="">
                     </div>
                     <div class="text-card">
                         <h2 class="title-card">Atracción de personal</h2>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="card-serv">
                     <div class="img-card">
-                        <img src="img/wallp-02.jpg" alt="">
+                        <img src="img/pers-02.png" alt="">
                     </div>
                     <div class="text-card">
                         <h2 class="title-card">Selección de personal</h2>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="card-serv">
                     <div class="img-card">
-                        <img src="img/wallp-03.jpg" alt="">
+                        <img src="img/pers-03.png" alt="">
                     </div>
                     <div class="text-card">
                         <h2 class="title-card">Contratación de personal</h2>
@@ -223,19 +223,19 @@
         <div class="content-if content-if-min">
             <div class="row-vent">
                 <div class="box-vent">
-                    <img src="img/location.svg" alt="">
+                    <img src="img/location.png" alt="">
                     <h2>Presecia a <b>nivel Nacional</b></h2>
                 </div>
                 <div class="box-vent">
-                    <img src="img/pro.svg" alt="">
+                    <img src="img/pro.png" alt="">
                     <h2><b>Experiencia en todos los sectores</b> y niveles de cargo</h2>
                 </div>
                 <div class="box-vent">
-                    <img src="img/person.svg" alt="">
+                    <img src="img/users.png" alt="">
                     <h2>Personal <b>altamente capacitado</b></h2>
                 </div>
                 <div class="box-vent">
-                    <img src="img/manos.svg" alt="">
+                    <img src="img/manos.png" alt="">
                     <h2><b>Nos ajustamos a las necesidades</b> de cada cliente</h2>
                 </div>
             </div>
