--- a/portafolio.html
+++ b/portafolio.html
@@ -17,8 +17,8 @@
 
     <title>Portafolio | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css?v=1.6">
-    <link rel="stylesheet" href="css/responsive.css?v=1.6">
+    <link rel="stylesheet" href="css/style.css?v=1.7">
+    <link rel="stylesheet" href="css/responsive.css?v=1.7">
 </head>
 <body>
 
@@ -191,7 +191,7 @@
                 </div>
                 <div class="item-vis item-vis-col">
                     <div class="icon-vis">
-                        <img src="img/select.png" alt="">
+                        <img src="img/pencil.png" alt="">
                         <h2 class="title-vis">Contratación de personal</h2>
                     </div>
                     <div class="text-vis text-vis-center">
